--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Bootstrap Example</title>
+  <title>Bootstrap</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
@@ -54,7 +54,7 @@
 
 </nav>
 <div>
-<img class="img-fluid" src="C:\Users\Dell\Desktop\New folder\page.jpg" alt="ice">
+<img class="img-fluid" src="project\page.jpg" alt="ice">
 <div class="centered"><div class="display-1">EXPLORE</div>
 <div>everything and do what you love</div>
 <div class="row">
